style.css
@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
}

body {
  /* padding: 20px; */
  /* width: ; */
  /* background-color: rgb(209, 187, 146); */
  background-color: #f5f5f5;
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
}

main {
  max-width: 1300px;
  background-color: #f5f5f5;
  /* border-radius:  10px  10px 10px 10px; */
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #232f3e;
  padding: 20px;
  width: 100%;
}

header nav ul {
  display: flex;
  list-style: none;
  align-items: center;
  /* flex-direction: column; */
}

header nav ul li {
  margin: 0 15px;
  transition: transform 0.2s;
}

header nav ul li:hover {
  transform: scale(1.5);
  font-weight: bold;
}

header nav a {
  color: whitesmoke;
  text-decoration: none;
  font-size: 18;
  font-weight: 500;
}

section {
  background-color: white;
  margin: 20px 0;
  border-radius: 10px;
}

#product {
  display: flex;
}

.prod-img {
  max-width: 600px;
  height: auto;
  background-color: antiquewhite;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: space-around;
  padding-bottom: 25px;
  align-items: flex-end;
  background-image: url(./images/products/m16-bg.png);
  flex: 1;
  margin: 30px;
  border-radius: 20px;
}

.sub-img {
  border-radius: 10px;
  transition: 0.5s;
}

.sub-img:hover {
  cursor: zoom-in;
  /* box-shadow: 0px 0px 10px #000000; */
}

.prod-info {
  flex: 1;
  padding: 30px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

h1 {
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  font-size: 35px;
}

.review {
  padding-top: 10px;
}

.review p {
  display: inline;
  padding-left: 10px;
}

.spec {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 20px 0;
}

.spec p {
  font-size: 30px;
  font-weight: 600;
}

select {
  height: 45px;
  text-align: center;
  border: 2px solid grey;
  background-color: white;
  border-radius: 10px;
  padding: 5px;
}

.description p {
  font-weight: 300;
  color: grey;
  padding-bottom: 30px;
}

.description button {
  border: 0px;
  padding: 20px 40px;
  background-color: #232f3e;
  color: whitesmoke;
  font-weight: 500;
  font-size: 20px;
  border-radius: 10px;
  transition: transform 0.2s;
}

.description button:hover {
  transform: scale(1.1);
  cursor: pointer;
}

#recommendation {
  padding: 30px;
}

#recommendation h2 {
  text-align: center;
  font-size: 30px;
  font-weight: 400;
  /* padding: 30px; */
  margin-bottom: 30px;
}

.prod-cards {
  display: flex;
  justify-content: space-between;
}

.card {
  display: flex;
}

.card img {
  border-radius: 15px;
  transition: transform 0.2s;
}

.card img:hover {
  transform: scale(1.2);
}

.card-info {
  padding-left: 15px;
  font-size: 15px;
}

.card-info a {
  color: black;
  text-decoration: none;
}

.card-info a:hover {
  text-decoration: underline;
}

.price {
  font-weight: 500;
}

#reviews {
  padding: 30px;
}

#reviews h2 {
  font-size: 30px;
  font-weight: 400;
}

.prod-review {
  display: flex;
  margin: 30px 0;
}

.profile-icon {
  border-radius: 50%;
}

.customer {
  min-width: 380px;
  display: flex;
  gap: 15px;
}

.review-info h3 {
  font-weight: 600;
}

.review-info p {
  font-weight: 300;
}

.review-info h3 a {
  color: black;
  text-decoration: none;
}

.review-info h3 a:hover {
  text-decoration: underline;
}

footer {
  background-color: white;
  margin: 20px 0;
  padding: 30px;
  border-radius: 10px;
}

/* section {
  background-color: white;
  margin: 20px 0;
  border-radius: 10px;
} */

/* footer ul {
  list-style: none;
} */

footer nav ul {
  display: flex;
  list-style: none;
  align-items: center;
  justify-content: center;
  margin-bottom: 20px;
}

footer nav ul li {
  margin: 0 15px;
  transition: transform 0.2s;
}

footer nav ul li:hover {
  transform: scale(1.5);
  font-weight: bold;
}

footer a {
  color: #232f3e;
  text-decoration: none;
  font-weight: 400;
  text-align: center;
  font-size: 18px;
}

.copyright {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
}

footer h2 {
  font-size: 15px;
  font-weight: 300;
  color: #232f3e;
}

#sideskirt {
  display: none;
}

#ekis {
  display: none;
}

@media (max-width: 600px) {
  header nav ul {
    flex-direction: column;
  }

  header nav ul li:hover {
    transform: none;
  }

  #sideskirt {
    display: block;
    color: whitesmoke;
  }

  #ekis {
    display: block;
  }

  .sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    right: 0;
    background-color: #232f3e;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
    opacity: 10;
  }

  .sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: white;
    display: block;
    transition: 0.3s;
  }

  .sidenav a:hover {
    color: #f1f1f1;
  }

  .sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
  }

  section {
    /* background-color: white; */
  }

  body {
    align-items: flex-start;
  }

  main {
    width: 100%;
    /* height: 100vh; */
  }

  #product {
    display: grid;
    grid-template-rows: 1fr 2.2fr;
  }

  #main-bg {
    padding: 0;
    margin-bottom: 0;
    background-size: cover;
    background-position: center;
  }

  .sub-img {
    /* display: none; */
    width: 100px;
    height: auto;
  }

  .spec {
    flex-direction: column;
  }

  .spec select {
    width: 322px;
    font-size: 12px;
    margin-top: 10px;
  }

  .description button {
    width: 100%;
    border-radius: 30px;
  }

  .prod-cards {
    /* justify-content: space-between; */
    /* justify-content: space-around; */
  }

  .card-info {
    padding: 0;
  }

  .card {
    flex-direction: column;
    /* align-items: center; */
    width: 150px;
    height: 250px;
    /* border: 1px solid #232f3e; */
    box-shadow: 0px 0px 2px #000000;
    /* padding: 10px; */
    border-radius: 15px;
    transition: transform 0.2s;
    background-color: white;
  }

  .card a {
    width: 100%;
  }

  .card a img {
    width: 100%;
    height: auto;
    border-radius: 15px 15px 0 0;
  }

  .card a img:hover {
    transform: none;
  }

  .card:hover {
    transform: scale(1.2);
    box-shadow: 0px 0px 10px #000000;
  }

  .card-info {
    font-size: 10px;
    padding: 0 5px;
  }

  .card-info .star img {
    width: 10px;
  }

  .prod-review {
    flex-direction: column;
  }
}

